--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <a href="https://www.youtube.com/@CentrodeComprasCdC" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
             <img src="logos/youtube.png" alt="YouTube" class="social-icon" />
           </a>
-          <a href="https://tiktok.com/@centrodecompra" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
+          <a href="tiktok.com/@cdc.centrodecompra" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
             <img src="logos/tiktok.png" alt="TikTok" class="social-icon" />
           </a>
           <a href="https://t.me/centrodecompra" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
