--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <a href="https://t.me/centrodecompra" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
             <img src="logos/telegram.jpg" alt="Telegram" class="social-icon" />
           </a>
-          <a href="https://kwai.com/@centrodecompra" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
+          <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
             <img src="logos/kwai.png" alt="Kwai" class="social-icon" />
           </a>
         </div>
