--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <a href="https://chat.whatsapp.com/CYdOho9nYbKAwzDA8I9QeQ?mode=ac_t" class="action-btn whatsapp-btn" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
-          <a href="https://t.me/centrodecompra" class="action-btn telegram-btn" target="_blank" rel="noopener">
+          <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="action-btn telegram-btn" target="_blank" rel="noopener">
             <i class="fab fa-telegram-plane"></i> Telegram
           </a>
         </div>
@@ -284,7 +284,7 @@
           <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
             <img src="logos/tiktok.png" alt="TikTok" class="social-icon" />
           </a>
-          <a href="https://t.me/centrodecompra" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
+          <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
             <img src="logos/telegram.jpg" alt="Telegram" class="social-icon" />
           </a>
           <a href=" https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
