--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <ul>
           <li><a href="#termos">Termos de Uso</a></li>
           <li><a href="sobre.html">Política de Privacidade</a></li>
-          <li><a href="#faq">FAQ</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li><a href="contato.html">Suporte</a></li>
         </ul>
       </div>
