--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -39,19 +39,20 @@
 
       <label for="categoria">Categoria</label>
       <select id="categoria" name="categoria" required aria-required="true">
-        <option value="todas">Todas</option>
-        <option value="pet">Pet</option>
+        <option value="" disabled selected>Selecione uma categoria</option>
         <option value="eletronicos">Eletrônicos</option>
         <option value="moda">Moda</option>
-        <option value="automotivo">Automotivo</option>
-        <option value="fitness">Fitness</option>
-        <option value="casa">Casa e Decoração</option>
-        <option value="beleza">Beleza</option>
+        <option value="casa-e-decoracao">Casa e Decoração</option>
         <option value="esportes">Esportes</option>
+        <option value="beleza">Beleza</option>
         <option value="livros">Livros</option>
-        <option value="infantil">Infantil</option>
-        <option value="Celulares">Celulares</option>
-        <option value="Eletrodomésticos">Eletrodomésticos</option>
+        <option value="brinquedos">Brinquedos</option>
+        <option value="saude">Saúde</option>
+        <option value="automotivo">Automotivo</option>
+        <option value="alimentos">Alimentos</option>
+        <option value="pet-shop">Pet Shop</option>
+        <option value="celulares">Celulares</option>
+        <option value="eletrodomesticos">Eletrodomésticos</option>
       </select>
 
       <label for="loja">Loja</label>
@@ -248,7 +249,7 @@
         const produto = data.data;
         document.getElementById('nome').value = produto.nome || '';
         document.getElementById('preco').value = produto.preco || '0';
-        document.getElementById('categoria').value = produto.categoria || 'todas';
+        document.getElementById('categoria').value = produto.categoria || '';
         document.getElementById('loja').value = produto.loja || 'todas';
         document.getElementById('link').value = produto.link || '';
         document.getElementById('produto-id').value = produto.id;
