--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       <li class="category-item" data-categoria="moda" aria-label="Filtrar por moda">
         <i class="fas fa-tshirt"></i> Moda
       </li>
-      <li class="category-item" data-categoria="casa" aria-label="Filtrar por casa">
-        <i class="fas fa-home"></i> Casa
+      <li class="category-item" data-categoria="casa-e-decoracao" aria-label="Filtrar por casa e decoração">
+        <i class="fas fa-home"></i> Casa e Decoração
       </li>
       <li class="category-item" data-categoria="esportes" aria-label="Filtrar por esportes">
         <i class="fas fa-futbol"></i> Esportes
@@ -131,11 +131,14 @@
       <li class="category-item" data-categoria="alimentos" aria-label="Filtrar por alimentos">
         <i class="fas fa-utensils"></i> Alimentos
       </li>
-      <li class="category-item" data-categoria="pet" aria-label="Filtrar por pet shop">
+      <li class="category-item" data-categoria="pet-shop" aria-label="Filtrar por pet shop">
         <i class="fas fa-paw"></i> Pet Shop
       </li>
-      <li class="category-item" data-categoria="Celulares" aria-label="Filtrar por celulares">
+      <li class="category-item" data-categoria="celulares" aria-label="Filtrar por celulares">
         <i class="fas fa-mobile-alt"></i> Celulares
+      </li>
+      <li class="category-item" data-categoria="eletrodomesticos" aria-label="Filtrar por eletrodomésticos">
+        <i class="fas fa-blender"></i> Eletrodomésticos
       </li>
     </ul>
   </aside>
@@ -287,7 +290,7 @@
           <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
             <img src="logos/telegram.jpg" alt="Telegram" class="social-icon" />
           </a>
-          <a href=" https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
+          <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
             <img src="logos/kwai.png" alt="Kwai" class="social-icon" />
           </a>
         </div>
