--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
       <li class="category-item" data-categoria="eletrodomesticos" aria-label="Filtrar por eletrodomésticos">
         <i class="fas fa-blender"></i> Eletrodomésticos
       </li>
+      <li class="category-item" data-categoria="infantil" aria-label="Filtrar por infantil">
+        <i class="fas fa-baby"></i> Infantil
+      </li>
     </ul>
   </aside>
 
