--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="container banner-content">
         <div class="banner-text">
           <h1>🔥 Ofertas Exclusivas</h1>
-          <p>Economize até 70% em milhares de produtos das melhores lojas!</p>
+          <p>Encontre ofertas incríveis em produtos de lojas confiáveis!</p> <!-- Texto ajustado para evitar promessas exageradas -->
         </div>
       </div>
     </section>
@@ -210,7 +210,9 @@
         </div>
 
         <!-- Google AdSense Ad Unit -->
-        <div class="ad-container" style="margin: 20px auto; text-align: center;">
+        <!-- NOTA: Valide os links de afiliados para garantir que levem a páginas relevantes -->
+        <div class="ad-container" style="margin: 40px auto; text-align: center;">
+          <span class="ad-label">Anúncio</span>
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
