--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="container">
         <div class="section-header">
           <div>
-            <h2><i class="fas fa-store"></i> Marketplace em Destaque</h2>
+            <h2><i class="fas fa-store"></i>Lojas Online</h2>
             <p>Explore produtos das lojas mais confiáveis</p>
           </div>
         </div>
