--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Centro de Compra">
     <title>Centro de Compra - Melhores Ofertas Online</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css"> <!-- Substitua pelo caminho do seu CSS -->
+    <link rel="stylesheet" href="/styles.css"> <!-- Ajustado para caminho absoluto; ajuste conforme necessário -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276"
             crossorigin="anonymous"></script>
 </head>
@@ -115,6 +115,15 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/script.js"></script> <!-- Ajustado para caminho absoluto; ajuste conforme necessário -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            if (window.adsbygoogle) {
+                console.log("Script do AdSense carregado com sucesso.");
+            } else {
+                console.warn("Script do AdSense não carregado.");
+            }
+        });
+    </script>
 </body>
 </html>
