--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="section-header">
           <h2 id="ofertas-titulo">Produtos em Destaque</h2>
         </div>
-        <div class="ad-container" style="margin: 20px auto; text-align: center;">
+        <div class="ad-container">
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
