--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <meta name="description" content="As melhores ofertas de lojas online em um só lugar. Filtre por categoria, loja ou busque produtos com descontos!" />
   <meta name="keywords" content="e-commerce, compras online, ofertas, descontos, lojas" />
   <meta name="author" content="Centro de Compra" />
+  <meta name="robots" content="index, follow" />
   <meta property="og:title" content="Centro de Compra - Ofertas Online" />
   <meta property="og:description" content="Encontre as melhores ofertas de lojas confiáveis em um só lugar." />
   <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.centrodecompra.com/logos/og-image.png" /> <!-- Substitua por uma URL de imagem válida -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@ComprasCdc" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
@@ -41,6 +44,18 @@
           <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="header-link" target="_blank" rel="noopener" aria-label="Kwai"><i class="fas fa-video"></i></a>
         </div>
       </div>
+    </div>
+    <!-- Banner Ad no Topo -->
+    <div class="ad-container" style="margin: 20px auto; text-align: center; max-width: 728px;">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-9781903408224276"
+           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
     <div class="header-main">
       <div class="container header-content">
@@ -102,6 +117,18 @@
         </div>
       </div>
     </section>
+    <!-- Banner Ad na Seção de Ofertas -->
+    <div class="ad-container" style="margin: 20px auto; text-align: center; max-width: 728px;">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-9781903408224276"
+           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
     <section class="stores-section" id="lojas">
       <div class="container">
         <div class="section-header">
@@ -151,11 +178,12 @@
         <div class="section-header">
           <h2 id="ofertas-titulo">Produtos em Destaque</h2>
         </div>
-        <div class="ad-container" style="margin: 20px auto; text-align: center;">
+        <!-- Banner Ad na Seção de Produtos -->
+        <div class="ad-container" style="margin: 20px auto; text-align: center; max-width: 728px;">
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="YOUR_AD_SLOT_ID"
+               data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
@@ -197,8 +225,8 @@
       <div class="footer-section">
         <h4>Links Úteis</h4>
         <ul>
-          <li><a href="#termos">Termos de Uso</a></li>
-          <li><a href="sobre.html">Política de Privacidade</a></li>
+          <li><a href="termos.html">Termos de Uso</a></li> <!-- Corrigido link quebrado -->
+          <li><a href="politica-privacidade.html">Política de Privacidade</a></li> <!-- Corrigido link quebrado -->
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contato.html">Suporte</a></li>
         </ul>
@@ -238,10 +266,10 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-disclaimer">
-          <p><i class="fas fa-info-circle"></i> Aviso: Somos um site de afiliados. Ao comprar pelos nossos links, podemos receber comissão, mas o preço é o mesmo para você, sem custo extra.</p>
+          <p><i class="fas fa-info-circle"></i> Aviso: Este site participa de programas de afiliados. Ao realizar compras por meio dos nossos links, podemos receber uma comissão sem custo adicional para você.</p>
         </div>
         <div class="footer-copyright">
-          <p>&copy; <span id="year">2025</span> Centro de Compra.</p>
+          <p>&copy; <span id="year">2025</span> Centro de Compra. Todos os direitos reservados.</p>
         </div>
       </div>
     </div>
@@ -252,7 +280,7 @@
       <button class="modal-close" id="modal-close" aria-label="Fechar modal"><i class="fas fa-times"></i></button>
       <div class="modal-carousel">
         <div class="carousel-images" id="modalCarrosselImagens"></div>
-        <button class="carousel-btn prev" id="modalPrev"><i class="fas fa-chevron-left"></i></button>
+        <button class="carousel-btn prev" id="modalPrev Prospecto"><i class="fas fa-chevron-left"></i></button>
         <button class="carousel-btn next" id="modalNext"><i class="fas fa-chevron-right"></i></button>
         <div class="carousel-dots" id="modalCarrosselDots"></div>
       </div>
