--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
-          <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span>
+          
           <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
         </div>
         <div class="header-links">
@@ -122,7 +122,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
+           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua por um ID de slot válido -->
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
