--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
-          
           <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
+          <!-- Reintroduzir o telefone, caso desejado -->
+          <!-- <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span> -->
         </div>
         <div class="header-links">
-          <a href="cupom.html" class="header-link"><i class="fas fa-tags"></i> Cupons</a>
-          <a href="https://www.instagram.com/cdccentrodecompra/" class="header-link" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="https://x.com/ComprasCdc" class="header-link" target="_blank" rel="noopener" aria-label="X"><i class="fab fa-x-twitter"></i></a>
-          <a href="https://www.youtube.com/@CentrodeComprasCdC" class="header-link" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-          <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="header-link" target="_blank" rel="noopener" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-          <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="header-link" target="_blank" rel="noopener" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
-          <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="header-link" target="_blank" rel="noopener" aria-label="Kwai"><i class="fas fa-video"></i></a>
+          <a href="cupom.html" class="header-link" aria-label="Cupons"><i class="fas fa-tags"></i> Cupons</a>
+          <a href="https://www.instagram.com/cdccentrodecompra/" class="header-link social-link" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://x.com/ComprasCdc" class="header-link social-link" target="_blank" rel="noopener" aria-label="X"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://www.youtube.com/@CentrodeComprasCdC" class="header-link social-link" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="header-link social-link" target="_blank" rel="noopener" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+          <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="header-link social-link" target="_blank" rel="noopener" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+          <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="header-link social-link" target="_blank" rel="noopener" aria-label="Kwai"><i class="fas fa-video"></i></a>
         </div>
       </div>
     </div>
@@ -122,7 +123,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua por um ID de slot válido -->
+           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -225,8 +226,8 @@
       <div class="footer-section">
         <h4>Links Úteis</h4>
         <ul>
-          <li><a href="termos.html">Termos de Uso</a></li> <!-- Corrigido link quebrado -->
-          <li><a href="politica-privacidade.html">Política de Privacidade</a></li> <!-- Corrigido link quebrado -->
+          <li><a href="termos.html">Termos de Uso</a></li>
+          <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contato.html">Suporte</a></li>
         </ul>
@@ -280,7 +281,7 @@
       <button class="modal-close" id="modal-close" aria-label="Fechar modal"><i class="fas fa-times"></i></button>
       <div class="modal-carousel">
         <div class="carousel-images" id="modalCarrosselImagens"></div>
-        <button class="carousel-btn prev" id="modalPrev Prospecto"><i class="fas fa-chevron-left"></i></button>
+        <button class="carousel-btn prev" id="modalPrev"><i class="fas fa-chevron-left"></i></button> <!-- Corrigido o ID -->
         <button class="carousel-btn next" id="modalNext"><i class="fas fa-chevron-right"></i></button>
         <div class="carousel-dots" id="modalCarrosselDots"></div>
       </div>
