--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Centro de Compra - Ofertas Online" />
   <meta property="og:description" content="Encontre as melhores ofertas de lojas confiáveis em um só lugar." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://www.centrodecompra.com/logos/og-image.png" /> <!-- Substitua por uma URL de imagem válida -->
+  <meta property="og:image" content="https://www.centrodecompra.com/logos/og-image.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@ComprasCdc" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
@@ -32,8 +32,6 @@
       <div class="container">
         <div class="header-info">
           <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
-          <!-- Reintroduzir o telefone, caso desejado -->
-          <!-- <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span> -->
         </div>
         <div class="header-links">
           <a href="cupom.html" class="header-link" aria-label="Cupons"><i class="fas fa-tags"></i> Cupons</a>
@@ -47,11 +45,11 @@
       </div>
     </div>
     <!-- Banner Ad no Topo -->
-    <div class="ad-container" style="margin: 20px auto; text-align: center; max-width: 728px;">
+    <div class="ad-container">
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
+           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -119,11 +117,11 @@
       </div>
     </section>
     <!-- Banner Ad na Seção de Ofertas -->
-    <div class="ad-container" style="margin: 20px auto; text-align: center; max-width: 728px;">
+    <div class="ad-container">
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
+           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -180,11 +178,11 @@
           <h2 id="ofertas-titulo">Produtos em Destaque</h2>
         </div>
         <!-- Banner Ad na Seção de Produtos -->
-        <div class="ad-container" style="margin: 20px auto; text-align: center; max-width: 728px;">
+        <div class="ad-container">
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI" <!-- Substitua por um ID de slot válido -->
+               data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
@@ -281,7 +279,7 @@
       <button class="modal-close" id="modal-close" aria-label="Fechar modal"><i class="fas fa-times"></i></button>
       <div class="modal-carousel">
         <div class="carousel-images" id="modalCarrosselImagens"></div>
-        <button class="carousel-btn prev" id="modalPrev"><i class="fas fa-chevron-left"></i></button> <!-- Corrigido o ID -->
+        <button class="carousel-btn prev" id="modalPrev"><i class="fas fa-chevron-left"></i></button>
         <button class="carousel-btn next" id="modalNext"><i class="fas fa-chevron-right"></i></button>
         <div class="carousel-dots" id="modalCarrosselDots"></div>
       </div>
