--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI"
+           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -121,7 +121,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI"
+           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -182,7 +182,7 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="INSIRA_SEU_AD_SLOT_ID_AQUI"
+               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
@@ -299,7 +299,7 @@
       // Verificar se os anúncios estão carregando corretamente
       const ads = document.querySelectorAll('.adsbygoogle');
       ads.forEach(ad => {
-        if (!ad.getAttribute('data-ad-slot') || ad.getAttribute('data-ad-slot') === 'INSIRA_SEU_AD_SLOT_ID_AQUI') {
+        if (!ad.getAttribute('data-ad-slot') || ad.getAttribute('data-ad-slot') === 'google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0') {
           ad.closest('.ad-container').style.display = 'none';
           console.warn('Anúncio com data-ad-slot inválido ou não configurado.');
         }
